# embgen

./: .gitignore  404.html  Justfile  LICENSE  README.md  hooks.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
LICENSE/: index.html
architecture/: index.html
architecture/architecture/: index.html
architecture/full-api/: index.html
docs/: README.md  hooks.py  index.md
docs/architecture/: architecture.md
docs/domains/: commands.md  index.md  registers.md
docs/extending/: generators.md  index.md  models.md  multifile.md  templates.md
docs/usage/: cli.md  full-api.md  python-api.md
domains/: index.html
domains/commands/: index.html
domains/registers/: index.html
extending/: index.html
extending/generators/: index.html
extending/models/: index.html
extending/multifile/: index.html
extending/templates/: index.html
search/: search_index.json
src/embgen/: __init__.py  __main__.py  cli.py  core.py  discovery.py  generator.py  models.py  scaffold.py  templates.py
src/embgen/domains/: __init__.py
src/embgen/domains/commands/: __init__.py  generator.py  models.py
src/embgen/domains/commands/templates/: commands_base.py  template.h.j2  template.md.j2  template.py.j2
src/embgen/domains/registers/: __init__.py  generator.py  models.py
src/embgen/domains/registers/templates/: reg_common.c  reg_common.h  template.h.j2  template.md.j2  template.py.j2
src/embgen/domains/testing/: __init__.py  generator.py  models.py
src/embgen/domains/testing/templates/: template.c_multi.c.j2  template.c_multi.h.j2  template.dat_multi.dat.1.j2  template.dat_multi.dat.2.j2  template.dat_multi.dat.3.j2  template.json.j2  template.txt.j2  testing_helper.txt
test/: test_cli.py  test_commands.py  test_core.py  test_main.py  test_multifile.py  test_registers.py  test_testing.py
test/configs/commands/: simple.yml  tinyprobe.yml
test/configs/registers/: regs_afe_dtgc.yml  regs_afe_glb.yml  regs_fpga.yml  regs_tx.yml  simple.yml
test/configs/testing/: full_config.yml
usage/cli/: index.html
usage/python-api/: index.html
